Fix calculate outbound total price & user