@@ -61,21 +61,17 @@ public class UserServiceImpl implements UserService {
 
   @Lazy @Autowired private UserRepository userRepository;
   @Lazy @Autowired private UserMapper userMapper;
-
-  @Lazy @Autowired private RoleRepository roleRepository;
   @Lazy @Autowired private RoleMapper roleMapper;
 
   @Lazy @Autowired private BranchMapper branchMapper;
 
   @Lazy @Autowired private UserRoleMapService userRoleMapService;
   @Lazy @Autowired private UserRoleMapRepository userRoleMapRepository;
-  @Lazy @Autowired private UserRoleMapMapper userRoleMapMapper;
 
   @Lazy @Autowired private PasswordEncoder passwordEncoder;
   @Autowired private EmailService emailService;
   @Lazy @Autowired private BranchService branchService;
   @Lazy @Autowired private RoleService roleService;
-  private FutureOrPresentValidatorForReadableInstant futureOrPresentValidatorForReadableInstant;
 
   @Override
   public String getAuthenticatedUserEmail() throws UsernameNotFoundException {
@@ -130,7 +126,7 @@ public class UserServiceImpl implements UserService {
 
     // Fetch users by keyword and map to DTO
     return userRepository
-        .searchUsers(keyword, UserStatusType.PENDING, status, pageable)
+        .searchUsers(keyword, status, pageable)
         .map(userMapper::toDTO);
   }
 
@@ -161,11 +157,14 @@ public class UserServiceImpl implements UserService {
       throw new HrmCommonException(HrmConstant.ERROR.ROLE.NOT_ALLOWED);
     }
 
+    UserEntity user = userRepository.findById(id).orElse(null);
+    // Validate that the user exists before attempting to delete
+    if (user == null || user.getStatus() == UserStatusType.DELETED) {
+      return null;
+    }
+
     // Retrieve user by ID and map to DTO
-    return Optional.ofNullable(id)
-        .flatMap(e -> userRepository.findById(id))
-        .map(userMapper::toDTO)
-        .orElse(null); // Return null if user not found
+    return userMapper.toDTO(user); // Return null if update fails
   }
 
   @Override
@@ -254,7 +253,7 @@ public class UserServiceImpl implements UserService {
     /** TODO Only allow admin user to update other users. */
     UserEntity oldUserEntity = null;
 
-    if (!validateUser(user) || user.getId() == null) {
+    if (!validateUser(user) || (!profile && user.getId() == null)) {
       throw new HrmCommonException(HrmConstant.ERROR.USER.INVALID);
     }
 
@@ -269,11 +268,11 @@ public class UserServiceImpl implements UserService {
     } else {
       // Get data of logged in user before updating
       String email = this.getAuthenticatedUserEmail();
-      oldUserEntity = userMapper.toEntity(this.findLoggedInfoByEmail(email));
+      oldUserEntity = userRepository.findByEmail(email).orElse(null);
     }
 
     // Check if the user exists before updating
-    if (oldUserEntity == null) {
+    if (oldUserEntity == null || oldUserEntity.getStatus() == UserStatusType.DELETED) {
       throw new HrmCommonException(USER.NOT_EXIST);
     }
 
@@ -354,13 +353,16 @@ public class UserServiceImpl implements UserService {
       throw new HrmCommonException(HrmConstant.ERROR.ROLE.NOT_ALLOWED);
     }
 
+    UserEntity user = userRepository.findById(id).orElse(null);
     // Validate that the user exists before attempting to delete
-    if (!userRepository.existsById(id)) {
+    if (user == null || user.getStatus() == UserStatusType.DELETED) {
       throw new HrmCommonException(USER.NOT_EXIST);
     }
 
-    // TODO should delete license as well
-    userRepository.deleteById(id); // Delete the user
+    Optional.ofNullable(user)
+            .map(
+                    e -> e.setStatus(UserStatusType.DELETED))
+            .map(userRepository::save);// Delete the user
   }
 
   @Deprecated
@@ -547,10 +549,7 @@ public class UserServiceImpl implements UserService {
             // Mapping fields from the Excel row to the User object
             user.setUserName(row.getCell(0) != null ? row.getCell(0).getStringCellValue() : null);
             user.setEmail(row.getCell(1) != null ? row.getCell(1).getStringCellValue() : null);
-            user.setPhone(
-                row.getCell(2) != null
-                    ? String.valueOf((long) row.getCell(2).getNumericCellValue())
-                    : null);
+            user.setPhone(row.getCell(2) != null ? row.getCell(2).getStringCellValue() : null);
             user.setFirstName(row.getCell(3) != null ? row.getCell(3).getStringCellValue() : null);
             user.setLastName(row.getCell(4) != null ? row.getCell(4).getStringCellValue() : null);
 
@@ -685,7 +684,7 @@ public class UserServiceImpl implements UserService {
 
     // Fetch user data (this would typically come from your database/repository)
     List<User> users =
-        userRepository.findAll().stream().map(userMapper::toDTO).collect(Collectors.toList());
+            getByPaging(0, Integer.MAX_VALUE, "id", "ASC", "", null).stream().toList();
 
     // Call the utility to export data
     try {
